adding new text

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,7 +18,7 @@
         </p>
         <form >
             <input placeholder="location">
-            <button type="button" class="btn btn-primary">Search</button>
+            <button>Search</button>
         </form>
         <p id ="message-1"></p>
         <p id ="message-2"></p>
