--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
          {{>header}}
+         <p>This website is created just for learning purpose!</p>
     <img class ="potrait" src="/img/download.jpg" />
     </div>
    
